Java 17 に移行